<resources>
    <string name="app_name">FirebaseAuthExample</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="error_weak_password">Password is too weak.</string>
    <string name="error_invalid_email">Email address is malformed.</string>
    <string name="error_email_exists">Email address already in use.</string>
    <string name="error_user_not_found">No user found with this email.</string>
    <string name="error_wrong_password">Wrong password.</string>
    <string name="verification_email_sent">Verification email sent.</string>
    <string name="error_sending_verification_email">Error sending verification email.</string>
</resources>